add custom styling

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // app
-$theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
-$top-header-text-color: #fff;
+$theme-gradient: linear-gradient(72deg, #a5d8ff, #fff);
+$top-header-text-color: #212529;
 
 /**
  * @light theme
