add date & fix display penguin favico

--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -18,7 +18,7 @@
   }
 
   .portfolio {
-    display: inline-block;
+    float: right;
     font-size: 28px;
     padding-top: 8px;
     color: $top-header-text-color;
