--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -27,4 +27,15 @@
     font-family: 'Catamaran';
     font-weight: 800;
   }
+
+  .til {
+    float: right;
+    font-size: 28px;
+    padding-top: 8px;
+    color: $top-header-text-color;
+    opacity: 0.7;
+    margin-left: 20px;
+    font-family: 'Catamaran';
+    font-weight: 800;
+  }
 }
